Configured Rate Limiting Policy  - Added external NuGet package "AspNetCoreRateLimit"

--- a/ApiProtection/appsettings.json
+++ b/ApiProtection/appsettings.json
@@ -5,5 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  // More explaniation on Web Api word doc - Iyad
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": false,
+    "StackBlockedRequestes": false,
+    "RealIpHeader": "X-Real-IP",
+    "HttpStatusCode": 429,
+    "IpWhitelist": [ "127.0.0.1" ],
+    "EndpointWhitelist": [], // example -> [ "GET:/api/users" ]
+    "GeneralRules": [
+      {
+        "Endpoint": "*", 
+        "Period": "5s", 
+        "Limit": 2 
+      }
+      //,
+      //{ // We can add another rule on top of the previous rule 
+      //  // the scenario will be you can hit the API 2 times every 5 s 
+      //  // but 5 calls in 1 minute only
+      //  "Endpoint": "*",
+      //  "Period": "1m", 
+      //  "Limit": 5 
+      //}
+
+    ]
+  }
 }
